--- a/app/src/main/res/layout/menu_fragment.xml
+++ b/app/src/main/res/layout/menu_fragment.xml
@@ -47,7 +47,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/newWords" />
+            app:layout_constraintTop_toBottomOf="@+id/newWords"/>
+<!--            android:enabled="@{menuViewModel.oldWordsButtonVisible}"/>-->
 
         <Button
             android:id="@+id/stats"
