--- a/app/src/main/res/layout/new_words_fragment.xml
+++ b/app/src/main/res/layout/new_words_fragment.xml
@@ -15,7 +15,7 @@
         app:layout_constraintTop_toBottomOf="@+id/constraintLayout">
 
         <FrameLayout
-            android:id="@+id/frameLayout2"
+            android:id="@+id/wordLayout"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginStart="16dp"
@@ -42,7 +42,7 @@
                     android:orientation="vertical">
 
                     <ImageView
-                        android:id="@+id/imageView"
+                        android:id="@+id/wordImage"
                         android:layout_width="match_parent"
                         android:layout_height="320dp"
                         android:contentDescription="wordPicture"
@@ -86,7 +86,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/frameLayout2" />
+            app:layout_constraintTop_toBottomOf="@+id/wordLayout" />
 
         <Button
             android:id="@+id/leftTool"
