--- a/app/src/main/res/layout/new_words_fragment.xml
+++ b/app/src/main/res/layout/new_words_fragment.xml
@@ -1,121 +1,130 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout  xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools" >
+
+    <data>
+        <variable
+            name="newWordsViewModel"
+            type="com.example.projectwork.newwords.NewWordsViewModel" />
+        <import type="android.view.View" />
+    </data>
+
+    <FrameLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".newwords.NewWordsFragment">
+        tools:context=".newwords.NewWordsFragment">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/allLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">
-
-        <FrameLayout
-            android:id="@+id/wordLayout"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/allLayout"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="16dp"
-            app:layout_constraintBottom_toTopOf="@+id/toolbar2"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            android:layout_height="match_parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">
 
-            <ScrollView
-                style="@android:style/Widget.DeviceDefault.Light.ScrollView"
+            <FrameLayout
+                android:id="@+id/wordLayout"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:paddingLeft="16dp"
-                android:paddingTop="16dp"
-                android:paddingRight="16dp"
-                android:paddingBottom="16dp">
+                android:layout_height="0dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="16dp"
+                app:layout_constraintBottom_toTopOf="@+id/toolbar2"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
-                <LinearLayout
+                <ScrollView
+                    style="@android:style/Widget.DeviceDefault.Light.ScrollView"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:layout_height="match_parent"
+                    android:paddingLeft="16dp"
+                    android:paddingTop="16dp"
+                    android:paddingRight="16dp"
+                    android:paddingBottom="16dp">
 
-                    <ImageView
-                        android:id="@+id/wordImage"
-                        android:layout_width="match_parent"
-                        android:layout_height="320dp"
-                        android:contentDescription="wordPicture"
-                        android:src="@color/colorPrimaryDark" />
-
-                    <TextView
-                        android:id="@+id/wordText"
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Word"
-                        android:textAlignment="center"
-                        android:textAllCaps="true"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+                        android:orientation="vertical">
 
-                    <TextView
-                        android:id="@+id/transcryptionText"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Transcryption"
-                        android:textAlignment="center"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+                        <ImageView
+                            android:id="@+id/wordImage"
+                            android:layout_width="match_parent"
+                            android:layout_height="320dp"
+                            android:contentDescription="wordPicture"
+                            android:src="@color/colorPrimaryDark" />
 
-                    <TextView
-                        android:id="@+id/translationText"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Translations"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+                        <TextView
+                            android:id="@+id/wordText"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Word"
+                            android:textAlignment="center"
+                            android:textAllCaps="true"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
-                </LinearLayout>
-            </ScrollView>
-        </FrameLayout>
+                        <TextView
+                            android:id="@+id/transcryptionText"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Transcryption"
+                            android:textAlignment="center"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar2"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#FFFFFF"
-            android:minHeight="?attr/actionBarSize"
-            android:theme="?attr/actionBarTheme"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/wordLayout" />
+                        <TextView
+                            android:id="@+id/translationText"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Translations"
+                            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
-        <Button
-            android:id="@+id/leftTool"
-            style="@android:style/Widget.Material.Button.Borderless"
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
-            android:backgroundTint="#00000000"
-            android:fontFamily="sans-serif-light"
-            android:text="Закончить"
-            android:textColor="#000FF5"
-            android:visibility="visible"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/toolbar2" />
+                    </LinearLayout>
+                </ScrollView>
+            </FrameLayout>
 
-        <Button
-            android:id="@+id/rightTool"
-            style="@android:style/Widget.Material.Button.Borderless"
-            android:layout_width="96dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="4dp"
-            android:backgroundTint="#00000000"
-            android:fontFamily="sans-serif-light"
-            android:text="Дальше"
-            android:textColor="#000FF5"
-            android:visibility="visible"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/toolbar2" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</FrameLayout>
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#FFFFFF"
+                android:minHeight="?attr/actionBarSize"
+                android:theme="?attr/actionBarTheme"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/wordLayout" />
+
+            <Button
+                android:id="@+id/leftTool"
+                style="@android:style/Widget.Material.Button.Borderless"
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
+                android:backgroundTint="#00000000"
+                android:fontFamily="sans-serif-light"
+                android:text="Закончить"
+                android:textColor="#000FF5"
+                android:visibility="visible"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/toolbar2" />
+
+            <Button
+                android:id="@+id/rightTool"
+                style="@android:style/Widget.Material.Button.Borderless"
+                android:layout_width="96dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="4dp"
+                android:backgroundTint="#00000000"
+                android:fontFamily="sans-serif-light"
+                android:text="Дальше"
+                android:textColor="#000FF5"
+                android:visibility="visible"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/toolbar2" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </FrameLayout>
+</layout>
