--- a/app/src/main/res/layout/app_settings_item_with_binding.xml
+++ b/app/src/main/res/layout/app_settings_item_with_binding.xml
@@ -31,7 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
-            android:text="+"
+            android:text="@{languageData.language}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
