--- a/app/src/main/res/layout/stats_fragment.xml
+++ b/app/src/main/res/layout/stats_fragment.xml
@@ -35,7 +35,7 @@
                 android:id="@+id/wordsAllTimeText"
                 android:layout_width="347dp"
                 android:layout_height="wrap_content"
-                android:text="Всего слов в языке:"
+                android:text="@{statsViewModel.wordsAmountString}"
                 android:textAlignment="center"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 app:layout_constraintBottom_toTopOf="@+id/todayWordText"
@@ -48,7 +48,7 @@
                 android:id="@+id/todayWordText"
                 android:layout_width="347dp"
                 android:layout_height="wrap_content"
-                android:text="Всего изученных слов:"
+                android:text="@{statsViewModel.studiedWordsAmountString}"
                 android:textAlignment="center"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 app:layout_constraintBottom_toTopOf="@+id/todayMistakes"
@@ -61,7 +61,7 @@
                 android:id="@+id/todayMistakes"
                 android:layout_width="347dp"
                 android:layout_height="wrap_content"
-                android:text="Осталось:"
+                android:text="@{statsViewModel.wordsLeftString}"
                 android:textAlignment="center"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 app:layout_constraintBottom_toBottomOf="parent"
