--- a/app/src/main/res/layout/menu_fragment.xml
+++ b/app/src/main/res/layout/menu_fragment.xml
@@ -48,6 +48,7 @@
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/userPhoto" />
+<!--                android:visibility="@{menuViewModel.newWordsButtonVisible ? View.VISIBLE : View.GONE}"/>-->
 
             <Button
                 android:id="@+id/oldWords"
