--- a/app/src/main/res/layout/old_words_fragment.xml
+++ b/app/src/main/res/layout/old_words_fragment.xml
@@ -50,6 +50,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/wordText">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/answer_text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="Введите ваш ответ"
