--- a/app/src/main/res/layout/new_words_fragment.xml
+++ b/app/src/main/res/layout/new_words_fragment.xml
@@ -60,7 +60,7 @@
                             android:id="@+id/wordText"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="Word"
+                            android:text="@{newWordsViewModel.intWord.originWord}"
                             android:textAlignment="center"
                             android:textAllCaps="true"
                             android:textAppearance="@style/TextAppearance.AppCompat.Large" />
@@ -69,7 +69,7 @@
                             android:id="@+id/transcryptionText"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="Transcryption"
+                            android:text="@{newWordsViewModel.intWord.transcription}"
                             android:textAlignment="center"
                             android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
@@ -77,7 +77,7 @@
                             android:id="@+id/translationText"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="Translations"
+                            android:text="@{newWordsViewModel.intWord.translation}"
                             android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
                     </LinearLayout>
