--- a/app/src/main/res/layout/new_words_fragment.xml
+++ b/app/src/main/res/layout/new_words_fragment.xml
@@ -77,7 +77,7 @@
                             android:id="@+id/translationText"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="@{newWordsViewModel.intWord.translation}"
+                            android:text="@{newWordsViewModel.splittingWord()}"
                             android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
                     </LinearLayout>
