--- a/app/src/main/res/layout/exit_screen_fragment.xml
+++ b/app/src/main/res/layout/exit_screen_fragment.xml
@@ -15,16 +15,19 @@
             android:id="@+id/allLayout"
             android:layout_width="match_parent"
             android:layout_height="731dp"
+            android:background = "#cfdaec"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent">
 
             <TextView
                 android:id="@+id/exitText"
+                android:background = "#FFFFFF"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="32dp"
                 android:layout_marginEnd="32dp"
+                android:layout_marginTop="128dp"
                 android:text="Вы действительно хотите выйти?"
                 android:textAlignment="center"
                 android:textSize="24sp"
@@ -37,24 +40,57 @@
                 android:id="@+id/toolbar2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="#FFFFFF"
+                android:layout_marginBottom="32dp"
+                android:backgroundTint="#759cd8"
                 android:minHeight="?attr/actionBarSize"
                 android:theme="?attr/actionBarTheme"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent" />
+
+            <ImageView
+                android:layout_width="128dp"
+                android:layout_height="128dp"
+                android:layout_marginTop="512dp"
+                android:src="@drawable/no_goodbye4"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.845"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageView
+                android:layout_width="256dp"
+                android:layout_height="256dp"
+                android:layout_marginTop="32dp"
+                android:src="@drawable/no_goodbye5"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.496"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageView
+                android:layout_width="128dp"
+                android:layout_height="128dp"
+                android:layout_marginTop="512dp"
+                android:layout_marginLeft="32dp"
+                android:src="@drawable/no_goodbye_no"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <Button
                 android:id="@+id/leftTool"
                 style="@android:style/Widget.Material.Button.Borderless"
-                android:layout_width="120dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="4dp"
-                android:backgroundTint="#00000000"
+                android:layout_width="128dp"
+                android:layout_height="64dp"
+                android:layout_marginStart="32dp"
                 android:fontFamily="sans-serif-light"
                 android:text="Нет"
                 android:textColor="#000FF5"
                 android:visibility="visible"
+                android:backgroundTint = "#759cd8"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/toolbar2" />
@@ -62,10 +98,10 @@
             <Button
                 android:id="@+id/rightTool"
                 style="@android:style/Widget.Material.Button.Borderless"
-                android:layout_width="96dp"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="4dp"
-                android:backgroundTint="#00000000"
+                android:layout_width="128dp"
+                android:layout_height="64dp"
+                android:backgroundTint = "#759cd8"
+                android:layout_marginEnd="32dp"
                 android:fontFamily="sans-serif-light"
                 android:text="Да"
                 android:textColor="#000FF5"
