--- a/app/src/main/res/layout/old_word_repeat_fragment.xml
+++ b/app/src/main/res/layout/old_word_repeat_fragment.xml
@@ -1,24 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout  xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-        <variable
-            name="newWordsViewModel"
-            type="com.example.projectwork.newwords.NewWordsViewModel" />
+    <variable
+        name="oldWordRepeatViewModel"
+        type="com.example.projectwork.oldwordrepeat.OldWordRepeatViewModel" />
         <import type="android.view.View" />
     </data>
 
     <FrameLayout android:layout_width="match_parent"
-    android:layout_height="match_parent"
+        android:layout_height="match_parent"
         tools:context=".newwords.NewWordsFragment">
+
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/allLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#cfdaec"
+            android:background = "#cfdaec"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintTop_toBottomOf="@+id/constraintLayout">
@@ -27,11 +28,11 @@
                 android:id="@+id/wordLayout"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginBottom="16dp"
-                app:layout_constraintBottom_toTopOf="@+id/toolbar2"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="32dp"
+                android:layout_marginEnd="32dp"
+                android:layout_marginBottom="32dp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
@@ -57,11 +58,12 @@
                             android:contentDescription="wordPicture"
                             android:src="@color/colorPrimaryDark" />
 
+                        <!--                            android:text="@{oldWordRepeatViewModel.getWord}"-->
                         <TextView
                             android:id="@+id/wordText"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="@{newWordsViewModel.intWord.originWord}"
+                            android:text="@{oldWordRepeatViewModel.WordString}"
                             android:textAlignment="center"
                             android:textAllCaps="true"
                             android:textAppearance="@style/TextAppearance.AppCompat.Large" />
@@ -70,7 +72,7 @@
                             android:id="@+id/transcryptionText"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="@{newWordsViewModel.intWord.transcription}"
+                            android:text="@{oldWordRepeatViewModel.TranscryptionString}"
                             android:textAlignment="center"
                             android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
@@ -78,55 +80,13 @@
                             android:id="@+id/translationText"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:text="@{newWordsViewModel.intWord.translation}"
+                            android:text="@{oldWordRepeatViewModel.TranslationString}"
                             android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
                     </LinearLayout>
                 </ScrollView>
             </FrameLayout>
 
-            <androidx.appcompat.widget.Toolbar
-                android:id="@+id/toolbar2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="32dp"
-                android:minHeight="?attr/actionBarSize"
-                android:theme="?attr/actionBarTheme"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/wordLayout" />
-
-
-            <Button
-                android:id="@+id/leftTool"
-                style="@android:style/Widget.Material.Button.Borderless"
-                android:layout_width="128dp"
-                android:layout_height="64dp"
-                android:layout_marginStart="32dp"
-                android:backgroundTint="#759cd8"
-                android:fontFamily="sans-serif-light"
-                android:text="Закончить"
-                android:textColor="#000FF5"
-                android:visibility="visible"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/toolbar2" />
-
-            <Button
-                android:id="@+id/rightTool"
-                style="@android:style/Widget.Material.Button.Borderless"
-                android:layout_width="128dp"
-                android:layout_height="64dp"
-                android:layout_marginEnd="32dp"
-                android:backgroundTint="#759cd8"
-                android:fontFamily="sans-serif-light"
-                android:text="Дальше"
-                android:textColor="#000FF5"
-                android:visibility="visible"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/toolbar2" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </FrameLayout>
 </layout>
